#134 Home page - Wrapping occurs for long emails. Cross browser fix.

--- a/web-app/css/cgrails/default/less/home.less
+++ b/web-app/css/cgrails/default/less/home.less
@@ -104,9 +104,6 @@
 		#user-info {
 			border:solid 1px darken(@hero-unit-color,10%);
 			padding:1em;
-			.media-body {
-				overflow:visible;
-			}
 			.break-word {
 				word-break: break-all;
 				word-wrap:break-word;
